test/libsolidity/errorRecoveryTests/wrong_compiler_recovers_2.sol
pragma solidity ^99.99.0;
this is surely invalid
// ----
// ParserError 6635: (31-33='is'): Expected identifier but got 'is'
// ParserError 6635: (34-40='surely'): Expected ';' but got identifier
// ParserError 6635: (49-49): Expected ';' but got end of source
